syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/zizdlp/zbook/pb/models";

message CommentBasicInfo {
  int64 comment_id                     = 1;
  int64 markdown_id                    = 2;
  int64 user_id                        = 3;
  int64 parent_id                      = 4;
  int64 root_id                        = 5;
  string comment_content               = 6;
  google.protobuf.Timestamp created_at = 7;
}
message CommentCountInfo {
  int64 comment_id  = 1;
  int32 like_count  = 2;
  int32 reply_count = 3;
  bool is_liked     = 4;
  bool is_disliked  = 5;
  bool is_shared    = 6;
  bool is_reported  = 7;
}

message ListCommentInfo {
  int64 markdown_id                    = 1;
  int64 parent_id                      = 2;
  string username                      = 3;
  string pusername                     = 4;
  string comment_content               = 5;
  google.protobuf.Timestamp created_at = 6;
  int64 like_count                     = 7;
  int64 reply_count                    = 8;
  bool is_liked                        = 9;
  bool is_disliked                     = 10;
  bool is_shared                       = 11;
  bool is_reported                     = 12;
  int64 comment_id                     = 13;
}

message ListAdminCommentInfo {
  int64 comment_id                     = 1;
  string comment_content               = 2;
  string username                      = 3;
  string email                         = 4;
  google.protobuf.Timestamp created_at = 5;
}
